# StyLens

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.agents/rules/: agent-executor.md  agent-optimizer.md  agent-planner.md  agent-reviewer.md  agentic-behavior.md  code-quality.md  performance-scabality.md  security-standards.md
apps/backend/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
apps/backend/app/: config.py  main.py
apps/backend/app/api/v1/: __init__.py  analyses.py
apps/backend/app/dependencies/: auth.py
apps/backend/app/repositories/: analysis_repo.py
apps/backend/app/schemas/: analysis.py
apps/backend/app/services/: ai_service.py  storage_service.py  weather_service.py
apps/backend/scratch/: add_title_to_analyses.sql  fix_analyses_schema.sql  update_schema.sql  update_style_preference.sql  verify_db.py
apps/frontend/: .dockerignore  .env.example  Dockerfile  README.md  middleware.ts  package-lock.json  package.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/closet/: page.tsx
apps/frontend/app/dashboard/: page.tsx
apps/frontend/app/forgot-password/: page.tsx
apps/frontend/hooks/: useCloset.ts
apps/frontend/lib/: api.ts  auth.ts  scroll-lock.ts
apps/frontend/services/: auth.service.ts  closet.service.ts
scratch/: verify_anon.py  verify_secret.py
supabase/migrations/: 20260430000001_initial_schema.sql  20260501000001_closet_schema.sql  20260506000001_multi_image_analysis.sql  20260509000001_add_user_additional_info.sql  20260608000000_add_full_name.sql
supabase/templates/: base-layout.html  confirmation.html  magic-link.html  reset-password.html
(+27 files in other folders)
