[project]
name = "stylens-backend"
version = "0.1.0"
description = "FastAPI backend for StyLens outfit analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "supabase>=2.4",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "Pillow>=10.3",
    "python-magic>=0.4",
    "slowapi>=0.1",
    "cachetools>=5.3",
    "google-genai>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "S"]

[tool.mypy]
strict = true
ignore_missing_imports = true
