[project]
name = "stylens-backend"
version = "0.1.0"
description = "FastAPI backend for StyLens outfit analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.0",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "supabase>=2.30.0",
    "python-jose[cryptography]",
    "httpx",
    "python-multipart",
    "Pillow",
    "python-magic",
    "slowapi",
    "cachetools",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "S"]

[tool.mypy]
strict = true
ignore_missing_imports = true
